# rust-ising

./: Cargo.toml
src/: main.rs
