[package]
name = "rust-ising"
version = "0.1.0"
authors = ["0h-n0 <kbu94982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
rand = "0.7.3"
rayon = "1.3.0"
failure = "0.1.6"
ndarray-parallel = "0.9.1"
